--- a/themestart/default.css
+++ b/themestart/default.css
@@ -1,4 +1,3 @@
-
 /* Color 1: color1
    Color 2: color2
    link  color: Color 3: color3
@@ -16,46 +15,37 @@ a:hover {
     color: color4;
 }
 
-#content,
-#left-sidebar,
-#right-sidebar {
-    padding: dpadding;
-    margin: dmargin;
-}
-
 #page-wrapper {
     width: portalwidth;
-    margin: 0 auto;
-    background: white;
 }
 
-#left-sidebar,
-#right-sidebar {
+#left-sidebar .block,
+#right-sidebar .block {
     border: 1px solid color2;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-}
-
-#right-sidebar {
-    width: rightcolumn;
-    float: left;
     padding: dpadding;
-    margin: dmargin;
+    margin-bottom: dmargin;
 }
 
 #left-sidebar {
     width: leftcolumn;
-    float: left;
-    padding: dpadding;
     margin: dmargin;
 }
 
-#content {
-    float: left;
-    width: maincolumn;
+#left-sidebar .block {
+    width: leftcontent
 }
 
-body div#content-zone {
-    width: auto;
+#right-sidebar {
+    width: rightcolumn;
+    margin: dmargin;
+}
+
+#right-sidebar .block {
+    width: rightcontent;
+}
+
+#content {
+    width: maincolumn;
+    padding: dpadding;
+    margin: dmargin;
 }
